<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/my_login_find_email_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:elevation="5dp"
        android:outlineProvider="none"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/my_login_find_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/my_login_sign_up_pass_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/blackForText"
            android:fontFamily="@font/roboto_medium"
            android:src="@drawable/ic_goods_main_toolbar_arrow_back_24"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_login_sign_up_name"
            android:textSize="13sp"
            android:textColor="@color/blackForText"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_medium"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/my_login_sign_up_name_hint"
            android:textSize="11sp"
            android:textColor="@color/greyForText"/>




    </LinearLayout>





</LinearLayout>