<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".src.login.find_email.FindEmailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/my_login_find_password_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:elevation="5dp"
        android:outlineProvider="none"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/my_login_find_email_toolbar_back_arrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_goods_main_toolbar_arrow_back_24"
            android:tint="@color/black"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/my_login_find_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/my_login_find_password_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_medium"
            android:src="@drawable/ic_goods_main_toolbar_arrow_back_24"
            android:tint="@color/black"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="@id/my_login_find_email_toolbar_back_arrow"
            app:layout_constraintBottom_toBottomOf="@id/my_login_find_email_toolbar_back_arrow"
            app:layout_constraintStart_toEndOf="@id/my_login_find_email_toolbar_back_arrow"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/my_login_find_password_toolbar"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/find_password_phone_number_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_login_find_password_notification"
            android:textSize="14sp"
            android:textColor="@color/blackForText"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/find_password_by_email_edit_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/my_login_find_password_email_hint"
            android:textSize="13sp"
            android:fontFamily="@font/roboto_regular"
            android:inputType="phone"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/find_password_phone_number_notification"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/find_password_phone_number_edit_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/my_login_find_email_phone_hint"
            android:textSize="13sp"
            android:fontFamily="@font/roboto_regular"
            android:inputType="phone"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/find_password_by_email_edit_tv"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/find_email_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="500dp"
            android:background="@color/my_profile_person_default_color"
            android:text="@string/my_login_find_password_btn"
            android:textSize="15sp"
            android:textColor="@color/my_profile_background_default_color"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintTop_toBottomOf="@id/find_password_phone_number_edit_tv"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>